--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,7 @@ Type: Package
 Title: Functions used by the integrative ecology team
 Version: 0.1.0
 Author: M.R. Helmus
-Maintainer: M.R. Helmus <mrhelmus@stemple.edu>
+Maintainer: M.R. Helmus <mrhelmus@temple.edu>
 Description: Archive of functions.
 License: MIT
 Encoding: UTF-8
