--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,7 +9,11 @@ License: MIT
 Imports:
     dplyr,
     googlesheets,
-    tibble
+    tibble,
+    lme4,
+    rgdal,
+    rgeos,
+    sp
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.0.1
