Graft tips from phelp
Added a file that begins integrating phelp with ieco for the tree
grafting functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(sppList)
 export(svl_trait)
 export(tail_apply)
 export(tail_total)
+export(tipXtip)
 export(tip_parse)
 export(trait.mean)
 export(trait.n)
@@ -30,6 +31,9 @@ import(rgdal)
 import(rgeos)
 import(sp)
 import(tibble)
+importFrom(ape,bind.tree)
+importFrom(ape,read.tree)
+importFrom(ape,which.edge)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,filter)
 importFrom(dplyr,mutate)
