add tipXnode and cleaning

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: ieco
 Type: Package
 Title: Functions used by the integrative ecology team
-Version: 0.1.1
+Version: 0.1.2
 Author: M.R. Helmus
 Maintainer: M.R. Helmus <mrhelmus@temple.edu>
 Description: Archive of functions for: Global Traits, Global Islands etc.
-License: MIT
+License: MIT + file LICENSE
 Imports:
     dplyr,
     googlesheets,
@@ -14,7 +14,8 @@ Imports:
     rgdal,
     rgeos,
     sp,
-    ape
+    ape,
+    geiger
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.0.1
