--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(sppList)
 export(svl_trait)
 export(tail_apply)
 export(tail_total)
+export(tipXnode)
 export(tipXtip)
 export(tip_parse)
 export(trait.mean)
@@ -32,11 +33,25 @@ import(rgeos)
 import(sp)
 import(tibble)
 importFrom(ape,bind.tree)
+importFrom(ape,dist.nodes)
 importFrom(ape,read.tree)
 importFrom(ape,which.edge)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,filter)
 importFrom(dplyr,mutate)
 importFrom(dplyr,select)
+importFrom(geiger,tips)
+importFrom(graphics,abline)
+importFrom(graphics,axis)
+importFrom(graphics,box)
+importFrom(graphics,boxplot)
+importFrom(graphics,hist)
+importFrom(graphics,locator)
+importFrom(graphics,mtext)
+importFrom(graphics,par)
+importFrom(graphics,points)
+importFrom(graphics,text)
 importFrom(lme4,fixef)
 importFrom(stats,aggregate)
+importFrom(stats,var)
+importFrom(stats,vcov)
