--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,7 @@ export(trait.mean)
 export(trait.n)
 export(trait.range)
 export(trait.sd)
+export(treeXnode)
 export(unep)
 export(vectorIsland)
 export(vif.mer)
@@ -32,8 +33,12 @@ import(rgdal)
 import(rgeos)
 import(sp)
 import(tibble)
+importFrom(ape,Ntip)
 importFrom(ape,bind.tree)
+importFrom(ape,branching.times)
 importFrom(ape,dist.nodes)
+importFrom(ape,drop.tip)
+importFrom(ape,ladderize)
 importFrom(ape,read.tree)
 importFrom(ape,which.edge)
 importFrom(dplyr,"%>%")
@@ -41,6 +46,7 @@ importFrom(dplyr,filter)
 importFrom(dplyr,mutate)
 importFrom(dplyr,select)
 importFrom(geiger,tips)
+importFrom(grDevices,rgb)
 importFrom(graphics,abline)
 importFrom(graphics,axis)
 importFrom(graphics,box)
