Fix bugs in treeXnode

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -38,9 +38,9 @@ importFrom(ape,bind.tree)
 importFrom(ape,branching.times)
 importFrom(ape,dist.nodes)
 importFrom(ape,drop.tip)
-importFrom(ape,ladderize)
 importFrom(ape,read.tree)
 importFrom(ape,which.edge)
+importFrom(ape,write.tree)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,filter)
 importFrom(dplyr,mutate)
