reorder phylo in treeXnode

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -38,7 +38,9 @@ importFrom(ape,bind.tree)
 importFrom(ape,branching.times)
 importFrom(ape,dist.nodes)
 importFrom(ape,drop.tip)
+importFrom(ape,ladderize)
 importFrom(ape,read.tree)
+importFrom(ape,reorder.phylo)
 importFrom(ape,which.edge)
 importFrom(ape,write.tree)
 importFrom(dplyr,"%>%")
