--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(addIslands.sp)
 export(bindsheet.morph)
 export(calcIslandArea)
+export(compare_multiPhylo)
 export(distance.reproj)
 export(do.grades.ieco)
 export(dp.count)
@@ -34,6 +35,7 @@ import(rgeos)
 import(sp)
 import(tibble)
 importFrom(ape,Ntip)
+importFrom(ape,all.equal.phylo)
 importFrom(ape,bind.tree)
 importFrom(ape,branching.times)
 importFrom(ape,dist.nodes)
