--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,7 @@ export(trait.n)
 export(trait.range)
 export(trait.sd)
 export(treeXnode)
+export(tree_scale)
 export(unep)
 export(vectorIsland)
 export(vif.mer)
