--- a/NAMESPACE
+++ b/NAMESPACE
@@ -63,6 +63,7 @@ importFrom(graphics,par)
 importFrom(graphics,points)
 importFrom(graphics,text)
 importFrom(lme4,fixef)
+importFrom(phytools,nodeHeights)
 importFrom(stats,aggregate)
 importFrom(stats,var)
 importFrom(stats,vcov)
