Several edits to the trait new and trait stat functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,17 +10,24 @@ export(dp.count)
 export(dp.spp)
 export(findCentroids)
 export(getlet.ieco)
+export(google.counts)
 export(nearestLarger)
 export(readsheet)
 export(specimen.mean)
+export(specimen.n)
+export(specimen.range)
+export(specimen.sd)
 export(spp.mean)
+export(spp.n)
+export(spp.range)
+export(spp.sd)
 export(sppList)
 export(svl_trait)
-export(tail_apply)
-export(tail_total)
 export(tipXnode)
 export(tipXtip)
 export(tip_parse)
+export(total_tail)
+export(total_tails)
 export(trait.mean)
 export(trait.n)
 export(trait.range)
@@ -35,6 +42,10 @@ import(rgdal)
 import(rgeos)
 import(sp)
 import(tibble)
+importFrom(RCurl,getURL)
+importFrom(XML,getNodeSet)
+importFrom(XML,htmlTreeParse)
+importFrom(XML,xmlValue)
 importFrom(ape,Ntip)
 importFrom(ape,all.equal.phylo)
 importFrom(ape,bind.tree)
