--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,7 +16,9 @@ Imports:
     rgeos,
     sp,
     geiger,
-    phytools
+    phytools,
+    RCurl,
+    XML
 Depends:
     ape (>= 3.1-4)
 Encoding: UTF-8
