--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,9 +18,8 @@ Imports:
     geiger,
     phytools,
     RCurl,
-    XML
-Depends:
-    ape (>= 3.1-4)
+    XML,
+    ape
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.0.1
